quotes-api/kubernetes/quotes_api_service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: quotes-api # name of this service
spec:
  ports: # ports to expose for this service
    - name: http # name for this port
      port: 80 # port that this service will listen on and receive traffic on
      targetPort: 8000 # port on the pods that traffic will be sent to
  selector:
    app: quotes-api # which deployment run this service (the pods with a metadata.name value of "quotes-api")
